--- a/package.json
+++ b/package.json
@@ -9,15 +9,17 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@react-native-community/geolocation": "^3.0.5",
+    "@react-native-async-storage/async-storage": "^1.17.11",
     "@react-navigation/native": "^6.1.3",
     "@react-navigation/native-stack": "^6.9.9",
     "axios": "^1.3.2",
     "expo": "^47.0.12",
+    "expo-location": "^15.0.1",
     "nativewind": "^2.0.11",
     "react": "18.1.0",
     "react-native": "0.70.5",
     "react-native-gesture-handler": "~2.8.0",
+    "react-native-location": "^2.5.0",
     "react-native-maps": "1.3.2",
     "react-native-reanimated": "~2.12.0",
     "react-native-safe-area-context": "4.4.1",
@@ -27,8 +29,7 @@
     "react-native-swiper": "^1.6.0",
     "react-native-webview": "11.23.1",
     "react-navigation-stack": "^2.10.4",
-    "tailwindcss": "^3.2.4",
-    "expo-location": "~15.0.1"
+    "tailwindcss": "^3.2.4"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
