--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "react-native-swiper": "^1.6.0",
     "react-native-webview": "11.23.1",
     "react-navigation-stack": "^2.10.4",
-    "tailwindcss": "^3.2.4"
+    "tailwindcss": "^3.2.4",
+    "expo-linear-gradient": "~12.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
